<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.nom.cruz.marcos.projetofinalandroiddev.LogIn">


    <TextView
        android:text="Log in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/editText10"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText11"
        android:hint="@string/password"
        android:layout_below="@+id/editText10"
        android:layout_alignLeft="@+id/editText10"
        android:layout_alignStart="@+id/editText10"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/loginButton"
        android:layout_below="@+id/editText11"
        android:layout_alignLeft="@+id/editText11"
        android:layout_alignStart="@+id/editText11" />

    <TextView
        android:text="@string/criar_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/criarPerfil"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:clickable="true"

        />

</RelativeLayout>
